--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,19 @@
+# database properties
+spring.data.mongodb.uri=${mongo_url}
+spring.datasource.url=jdbc:mysql://localhost:3306/commcat
+spring.datasource.username=sunil
+spring.datasource.password=sunil
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# DigitalOcean Spaces properties
 S3_KEY_ACCESS=${s3.key.access}
 S3_KEY_SECRET=${s3.key.secret}
 S3_BUCKET_ENDPOINT=${s3.bucket.endpoint}
 S3_BUCKET_REGION=${s3.bucket.region}
-spring.data.mongodb.uri=${mongo_url}
-spring.datasource.url=jdbc:mysql://localhost:3306
+
+# multipart file upload properties
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
