--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # database properties
 spring.data.mongodb.uri=${mongo_url}
-spring.datasource.url=jdbc:mysql://localhost:3306/commcat
-spring.datasource.username=sunil
-spring.datasource.password=sunil
+spring.datasource.url=jdbc:${mysql_url}
+# spring.datasource.username=sunil
+# spring.datasource.password=sunil
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
